Fixed vertical stretching bug

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -394,7 +394,7 @@ header {
     background-image: url('../img/projects/nodemon_logo.png');
     background-position: center 60px;
     background-repeat: no-repeat;
-    background-size: 365px 512px;
+    background-size: 455px 512px;
     opacity: 0.15;
     top: 0;
     left: 0;
